[package]
name = "scylla-tools-01"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch="main" }
aya-log = { git = "https://github.com/aya-rs/aya-log", branch = "main" }
scylla-tools-01-common = { path = "../scylla-tools-01-common", features=["user"] }
anyhow = "1.0.42"
bytes = "1"
ctrlc = "3.2"
simplelog = { version = "^0.11.0", features = ["paris"] }

structopt = { version = "0.3"}
tokio = { version = "1.0", features = ["rt", "signal", "time", "io-util", "net", "sync"] }

[[bin]]
name = "scylla-tools-01"
path = "src/main.rs"
